--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,8 +74,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.21-20.39.24
-BuildingEscape.LastCompileMethod=Unknown
+BuildingEscape.TimeStamp=2018.07.21-22.08.57
+BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.07.08-23.56.14
@@ -650,13 +650,19 @@ DesktopPlatform.TimeStamp=2018.07.08-23.54.17
 DesktopPlatform.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2018.07.08-23.55.02
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2018.07.08-23.54.51
+ExternalImagePicker.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2018.07.08-23.55.47
+NewLevelDialog.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.07.08-23.55.02
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=433.000 Y=54.000
+WindowSize=X=1243.000 Y=896.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -683,7 +689,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -697,7 +703,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
+UNR=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content
 BRUSH=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
 FBX=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
 FBXAnim=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
@@ -707,7 +713,7 @@ GenericOpen=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_B
 GenericSave=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
 MeshImportExport=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
 WorldRoot=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
-Level=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content/
+Level=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content
 Project=D:/Epic Games/Unreal Engine/UE_4.19/
 
 [MRU]
@@ -903,16 +909,19 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
-StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=True
-StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
-StaticMeshActor.Collision=True
-StaticMeshActor.Lighting=True
-StaticMeshActor.Rendering=True
+StaticMeshActor.TransformCommon=False
+StaticMeshActor.StaticMesh=False
+StaticMeshActor.Materials=False
+StaticMeshActor.Physics=False
+StaticMeshActor.Collision=False
+StaticMeshActor.Lighting=False
+StaticMeshActor.Rendering=False
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+PositionReport.Tags=True
+PositionReport.Activation=True
+PositionReport.Cooking=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
