PositionReport class logs out text to the Output Console.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,8 +45,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-72G2J6N
 LastExecutedLaunchName=DESKTOP-72G2J6N
 LastExecutedPIEPreviewDevice=
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.21-22.26.18
+BuildingEscape.TimeStamp=2018.07.21-22.47.26
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
@@ -656,6 +656,8 @@ NewLevelDialog.TimeStamp=2018.07.08-23.55.47
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.07.08-23.55.02
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2018.07.08-23.55.40
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -922,6 +924,12 @@ StaticMeshActor.Actor=True
 PositionReport.Tags=True
 PositionReport.Activation=True
 PositionReport.Cooking=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -933,5 +941,10 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Couch.SM_Couch;
 RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
 RecentlyPlaced=/Game/StarterContent/Props/SM_MatPreviewMesh_02.SM_MatPreviewMesh_02;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 
