Objects now reveal their positions through the reporter.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,8 +74,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.23-18.52.36
-BuildingEscape.LastCompileMethod=External
+BuildingEscape.TimeStamp=2018.07.23-19.14.38
+BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.07.08-23.56.14
@@ -911,7 +911,7 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
-StaticMeshActor.TransformCommon=False
+StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=False
 StaticMeshActor.Physics=False
