Added a door and a frame to the scene. Door can now be rotated through code.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.23-19.14.38
+BuildingEscape.TimeStamp=2018.07.23-20.05.29
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
@@ -941,12 +941,26 @@ PlayerStart.Object=True
 PlayerStart.Rendering=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+OpenDoor.Tags=True
+OpenDoor.Activation=True
+OpenDoor.Cooking=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
+RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Couch.SM_Couch;
 RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
@@ -957,5 +971,8 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
 
 
