Learned about the UPROPERTY macro, and created a pressure plate TriggerVolume variable that will let me open doors when pressed.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,8 +75,8 @@ CurrentScalingGridSize=6
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.23-20.36.38
-BuildingEscape.LastCompileMethod=External
+BuildingEscape.TimeStamp=2018.07.23-21.10.52
+BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.07.08-23.56.14
@@ -664,8 +664,8 @@ MovieSceneCapture.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1910.000 Y=1070.000
+ScreenPosition=X=887.000 Y=0.000
+WindowSize=X=1016.000 Y=932.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -912,7 +912,7 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
-StaticMeshActor.TransformCommon=True
+StaticMeshActor.TransformCommon=False
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=False
@@ -993,12 +993,23 @@ PointLightComponent.LightFunction=True
 PointLightComponent.DistanceFieldShadows=True
 PointLightComponent.Tags=True
 PointLightComponent.Cooking=True
+OpenDoor.OpenDoor=True
+TriggerVolume.TransformCommon=True
+TriggerVolume.Collision=True
+TriggerVolume.Tags=True
+TriggerVolume.Cooking=True
+TriggerVolume.BrushSettings=True
+TriggerVolume.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
+TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake;
 RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
@@ -1018,7 +1029,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Beveled.M_Brick_Clay_
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
