--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,11 +45,13 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=720
-MultipleInstanceLastWidth=1280
+MultipleInstanceLastHeight=1080
+MultipleInstanceLastWidth=1920
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-72G2J6N
 LastExecutedLaunchName=DESKTOP-72G2J6N
 LastExecutedPIEPreviewDevice=
+NewWindowWidth=1920
+NewWindowHeight=1080
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -76,8 +78,8 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.23-21.49.03
-BuildingEscape.LastCompileMethod=External
+BuildingEscape.TimeStamp=2018.07.24-18.42.00
+BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.07.08-23.56.14
@@ -1012,6 +1014,145 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
 Actor.TransformCommon=True
+EditorStyleSettings.UserInterface=True
+EditorStyleSettings.Colors=True
+EditorStyleSettings.Graphs=True
+EditorStyleSettings.Output Log=True
+EditorExperimentalSettings.Foliage=True
+EditorExperimentalSettings.Tools=True
+EditorExperimentalSettings.UserInterface=True
+EditorExperimentalSettings.Blueprints=True
+EditorExperimentalSettings.Cooking=True
+EditorExperimentalSettings.AI=True
+EditorExperimentalSettings.PIE=True
+EditorExperimentalSettings.LightingBuilds=True
+EditorExperimentalSettings.Materials=True
+EditorSettings.DerivedData=True
+EditorKeyboardShortcutSettings.AdvancedPreviewScene=True
+EditorKeyboardShortcutSettings.AnimGraph=True
+EditorKeyboardShortcutSettings.AssetEditor=True
+EditorKeyboardShortcutSettings.AssetManagerEditorCommands=True
+EditorKeyboardShortcutSettings.ClothPainterTools=True
+EditorKeyboardShortcutSettings.ClothPainter=True
+EditorKeyboardShortcutSettings.LiveLinkClient.Common=True
+EditorKeyboardShortcutSettings.SequenceRecorder.Common=True
+EditorKeyboardShortcutSettings.GenericCommands=True
+EditorKeyboardShortcutSettings.WidgetDesigner=True
+EditorKeyboardShortcutSettings.EditorViewport=True
+EditorKeyboardShortcutSettings.ContentBrowser=True
+EditorKeyboardShortcutSettings.RichCurveEditor=True
+EditorKeyboardShortcutSettings.TabCommands=True
+EditorKeyboardShortcutSettings.GraphEditor=True
+EditorKeyboardShortcutSettings.LandscapeEditor=True
+EditorKeyboardShortcutSettings.LayersView=True
+EditorKeyboardShortcutSettings.LevelEditor=True
+EditorKeyboardShortcutSettings.LevelEditorModes=True
+EditorKeyboardShortcutSettings.LevelSequenceEditor=True
+EditorKeyboardShortcutSettings.LevelViewport=True
+EditorKeyboardShortcutSettings.MainFrame=True
+EditorKeyboardShortcutSettings.MaterialEditor=True
+EditorKeyboardShortcutSettings.MediaPlayerEditor=True
+EditorKeyboardShortcutSettings.PersonaCommon=True
+EditorKeyboardShortcutSettings.PlayWorld=True
+EditorKeyboardShortcutSettings.VisualizationMenu=True
+EditorKeyboardShortcutSettings.Sequencer=True
+EditorKeyboardShortcutSettings.ShowFlagsMenu=True
+EditorKeyboardShortcutSettings.SplineComponentVisualizer=True
+EditorKeyboardShortcutSettings.SystemWideCommands=True
+EditorKeyboardShortcutSettings.NUTLogWidget=True
+EditorKeyboardShortcutSettings.EditorViewportClient=True
+EditorKeyboardShortcutSettings.VisualLogger=True
+EditorLoadingSavingSettings.Startup=True
+EditorLoadingSavingSettings.AutoReimport=True
+EditorLoadingSavingSettings.Blueprints=True
+EditorLoadingSavingSettings.AutoSave=True
+EditorLoadingSavingSettings.SourceControl=True
+EditorPerProjectUserSettings.DeveloperTools=True
+EditorPerProjectUserSettings.AI=True
+EditorPerProjectUserSettings.SimplygonSwarm=True
+EditorPerProjectUserSettings.HotReload=True
+EditorPerProjectUserSettings.Import=True
+EditorPerProjectUserSettings.Export=True
+EditorPerformanceSettings.EditorPerformance=True
+InternationalizationSettingsModel.Internationalization=True
+InternationalizationSettingsModel.Time=True
+SourceCodeAccessSettings.Accessor=True
+EditorTutorialSettings.Tutorials=True
+VRModeSettings.General=True
+VRModeSettings.UI Customization=True
+VRModeSettings.Motion Controllers=True
+LevelEditorMiscSettings.Editing=True
+LevelEditorMiscSettings.Sound=True
+LevelEditorMiscSettings.Levels=True
+LevelEditorMiscSettings.Screenshots=True
+LevelEditorPlaySettings.PlayInEditor=True
+LevelEditorPlaySettings.PlayInNewWindow=True
+LevelEditorPlaySettings.Sequencer=True
+LevelEditorPlaySettings.PlayInStandaloneGame=True
+LevelEditorPlaySettings.MultiplayerOptions=True
+LevelEditorPlaySettings.PlayOnDevice=True
+OnlinePIESettings.Logins=True
+LevelEditorViewportSettings.Controls=True
+LevelEditorViewportSettings.LookAndFeel=True
+LevelEditorViewportSettings.GridSnapping=True
+LevelEditorViewportSettings.Preview=True
+PersonaOptions.Preview Scene=True
+PersonaOptions.Viewport=True
+PersonaOptions.Audio=True
+PersonaOptions.Composites and Montages=True
+PersonaOptions.Skeleton Tree=True
+PersonaOptions.Mesh=True
+PersonaOptions.Asset Browser=True
+BlueprintEditorSettings.VisualStyle=True
+BlueprintEditorSettings.Workflow=True
+BlueprintEditorSettings.Compiler=True
+BlueprintEditorSettings.DeveloperTools=True
+BlueprintEditorSettings.Performance=True
+ContentBrowserSettings.ContentBrowser=True
+CurveEditorSettings.Curve Editor=True
+FlipbookEditorSettings.Background=True
+GraphEditorSettings.GeneralStyle=True
+GraphEditorSettings.Splines=True
+GraphEditorSettings.PinColors=True
+GraphEditorSettings.NodeTitleColors=True
+GraphEditorSettings.Tracing=True
+SequencerSettings.Keyframing=True
+SequencerSettings.General=True
+SequencerSettings.Timeline=True
+SequencerSettings.Snapping=True
+SequencerSettings.CurveEditor=True
+SequencerSettings.Playback=True
+MeshPaintSettings.Visualization=True
+SkeletalMeshEditorSettings.AnimationPreview=True
+SpriteEditorSettings.Background=True
+TileMapEditorSettings.Background=True
+TileSetEditorSettings.Background=True
+TileSetEditorSettings.Tile Editor=True
+TileSetEditorSettings.Tile Sheet Conditioning=True
+WidgetDesignerSettings.GridSnapping=True
+WidgetDesignerSettings.Dragging=True
+WidgetDesignerSettings.Visuals=True
+WidgetDesignerSettings.Interaction=True
+AnalyticsPrivacySettings.Options=True
+AutomationTestSettings.Loading=True
+AutomationTestSettings.Automation=True
+AutomationTestSettings.Open Asset Tests=True
+AutomationTestSettings.MiscAutomationSetups=True
+AutomationTestSettings.ExternalTools=True
+AutomationTestSettings.Screenshots=True
+CrashReporterSettings.CrashReporter=True
+LogVisualizerSettings.VisualLogger=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1020,8 +1161,11 @@ TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
+AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
@@ -1041,7 +1185,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Beveled.M_Brick_Clay_Beveled;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
