--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.24-18.42.00
+BuildingEscape.TimeStamp=2018.07.24-19.30.16
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
@@ -664,12 +664,14 @@ MovieSceneCapture.TimeStamp=2018.07.08-23.55.40
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2018.07.08-23.56.37
 StaticMeshEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2018.07.08-23.53.52
+BlueprintGraph.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=832.000 Y=0.000
+ScreenPosition=X=830.000 Y=3.000
 WindowSize=X=1082.000 Y=932.000
 InitiallyMaximized=False
 
@@ -697,7 +699,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -709,6 +711,14 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetManagementBrowser.ActiveTypeFilters=
+AssetManagementBrowser.EnabledTypeFilters=
+AssetManagementBrowser.ActiveFrontendFilters=
+AssetManagementBrowser.EnabledFrontendFilters=
+AssetManagementBrowser.ThumbnailSizeScale=0.100000
+AssetManagementBrowser.CurrentViewType=2
+AssetManagementBrowser.HiddenColumns=Class
+AssetManagementBrowser.HiddenColumns=Path
 
 [Directories2]
 UNR=../../../../../../2018_Class_Content/Unreal_And_C++/Section_03/UE4_Building-Escape/BuildingEscape/Content
@@ -1153,6 +1163,65 @@ SpotLight.DistanceFieldShadows=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+DefaultPawn.TransformCommon=True
+DefaultPawn.StaticMesh=True
+DefaultPawn.Materials=True
+DefaultPawn.Pawn=True
+DefaultPawn.FloatingPawnMovement=True
+DefaultPawn.NavMovement=True
+DefaultPawn.Physics=True
+DefaultPawn.Velocity=True
+DefaultPawn.PlanarMovement=True
+DefaultPawn.Collision=True
+DefaultPawn.Lighting=True
+DefaultPawn.MovementComponent=True
+DefaultPawn.Tags=True
+DefaultPawn.Rendering=True
+DefaultPawn.Activation=True
+DefaultPawn.Cooking=True
+DefaultPawn.Shape=True
+DefaultPawn.Navigation=True
+DefaultPawn.Camera=True
+DefaultPawn.Input=True
+DefaultPawn.Actor=True
+DefaultPawn_BP_C.TransformCommon=True
+DefaultPawn_BP_C.StaticMesh=True
+DefaultPawn_BP_C.Materials=True
+DefaultPawn_BP_C.Pawn=True
+DefaultPawn_BP_C.FloatingPawnMovement=True
+DefaultPawn_BP_C.NavMovement=True
+DefaultPawn_BP_C.Physics=True
+DefaultPawn_BP_C.Velocity=True
+DefaultPawn_BP_C.PlanarMovement=True
+DefaultPawn_BP_C.Collision=True
+DefaultPawn_BP_C.Lighting=True
+DefaultPawn_BP_C.MovementComponent=True
+DefaultPawn_BP_C.Tags=True
+DefaultPawn_BP_C.Rendering=True
+DefaultPawn_BP_C.Activation=True
+DefaultPawn_BP_C.Cooking=True
+DefaultPawn_BP_C.Shape=True
+DefaultPawn_BP_C.Navigation=True
+DefaultPawn_BP_C.Camera=True
+DefaultPawn_BP_C.Input=True
+DefaultPawn_BP_C.Actor=True
+DefaultPawn_BP_C.Tick=True
+DefaultPawn_BP_C.Replication=True
+DefaultPawn_BP_C.ComponentTick=True
+DefaultPawn_BP_C.ComponentReplication=True
+DefaultPawn_BP_C.Variable=True
+DefaultPawn_BP_C.Sockets=True
+DefaultPawn_BP_C.Events=True
+REINST_DefaultPawn_BP_C_33.Tick=True
+REINST_DefaultPawn_BP_C_33.Pawn=True
+REINST_DefaultPawn_BP_C_33.Camera=True
+REINST_DefaultPawn_BP_C_33.Rendering=True
+REINST_DefaultPawn_BP_C_33.Replication=True
+REINST_DefaultPawn_BP_C_33.Input=True
+REINST_DefaultPawn_BP_C_33.Actor=True
+Grabber.Rendering=True
+Grabber.Input=True
+Grabber.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1160,11 +1229,12 @@ Object=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StaticMesh=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/DefaultPawn_BP.DefaultPawn_BP;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
@@ -1184,7 +1254,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Bu
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Beveled.M_Brick_Clay_Beveled;
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1206,6 +1275,8 @@ StaticMeshActor.StaticMesh=True
 /Game/StarterContent/Props/Materials/M_Chair.M_Chair=1
 /Game/StarterContent/Props/SM_Door.SM_Door=1
 /Engine/MapTemplates/SM_Template_Map_Floor.SM_Template_Map_Floor=1
+/Engine/EngineMeshes/Sphere.Sphere=1
+/Game/DefaultPawn_BP.DefaultPawn_BP=1
 
 [MaterialEditor]
 PrimType=1
