Simulated physics on the chair pawn to prepare for line tracing.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -671,7 +671,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=580.000 Y=20.000
+ScreenPosition=X=820.000 Y=1.000
 WindowSize=X=1082.000 Y=932.000
 InitiallyMaximized=False
 
@@ -699,7 +699,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -930,7 +930,7 @@ WmfMediaSettings.Debug=True
 StaticMeshActor.TransformCommon=False
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Materials=True
-StaticMeshActor.Physics=False
+StaticMeshActor.Physics=True
 StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=False
 StaticMeshActor.Rendering=False
@@ -1234,6 +1234,7 @@ GrabberComponent.ComponentReplication=True
 GrabberComponent.Activation=True
 GrabberComponent.Cooking=True
 GrabberComponent.Events=True
+Actor.Rendering=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1246,6 +1247,8 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Game/DefaultPawn_BP.DefaultPawn_BP;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
@@ -1264,8 +1267,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Ceramic_Tile_Checker.M_Ceramic_Tile_Checker;
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1282,6 +1283,7 @@ bShowMobileStats=False
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=False
 StaticMeshActor.StaticMesh=True
+StaticMeshActor.Collision=True
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Props/Materials/M_Chair.M_Chair=1
@@ -1351,5 +1353,6 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StaticMeshActor=StaticMeshActor.Collision.Collision,
 
 
