Added a Physics Handler component to the PawnBP class, and found that component in Grabber.cpp

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.25-19.59.16
+BuildingEscape.TimeStamp=2018.07.25-21.02.20
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
@@ -699,7 +699,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1235,6 +1235,14 @@ GrabberComponent.Activation=True
 GrabberComponent.Cooking=True
 GrabberComponent.Events=True
 Actor.Rendering=True
+PhysicsHandleComponent.Variable=True
+PhysicsHandleComponent.Sockets=True
+PhysicsHandleComponent.PhysicsHandle=True
+PhysicsHandleComponent.Tags=True
+PhysicsHandleComponent.ComponentReplication=True
+PhysicsHandleComponent.Activation=True
+PhysicsHandleComponent.Cooking=True
+PhysicsHandleComponent.Events=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
