Logged out an input component, and setup the binding process for a new Grab method in GrabberComponent.cpp

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.07.25-21.02.20
+BuildingEscape.TimeStamp=2018.07.25-21.34.01
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
@@ -1253,6 +1253,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -1282,7 +1283,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=CompilerResultsLog
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
