Fixed an issue with the pawn rolling after dropping an object.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -671,7 +671,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=560.000 Y=66.000
+ScreenPosition=X=817.000 Y=2.000
 WindowSize=X=1082.000 Y=932.000
 InitiallyMaximized=False
 
@@ -1283,7 +1283,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=PIE
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1363,5 +1363,6 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
+DefaultPawn_BP_C=DefaultPawn_BP_C.Physics.ConstraintsGroup,
 
 
