--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.08.01-02.00.56
+BuildingEscape.TimeStamp=2018.08.01-02.15.48
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
@@ -672,7 +672,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=817.000 Y=2.000
+ScreenPosition=X=630.000 Y=83.000
 WindowSize=X=1082.000 Y=932.000
 InitiallyMaximized=False
 
@@ -700,7 +700,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1244,6 +1244,50 @@ PhysicsHandleComponent.ComponentReplication=True
 PhysicsHandleComponent.Activation=True
 PhysicsHandleComponent.Cooking=True
 PhysicsHandleComponent.Events=True
+Openable_Door_BP_C.TransformCommon=True
+Openable_Door_BP_C.StaticMesh=True
+Openable_Door_BP_C.Materials=True
+Openable_Door_BP_C.Physics=True
+Openable_Door_BP_C.Collision=True
+Openable_Door_BP_C.Lighting=True
+Openable_Door_BP_C.Rendering=True
+Openable_Door_BP_C.Tags=True
+Openable_Door_BP_C.Cooking=True
+Openable_Door_BP_C.Input=True
+Openable_Door_BP_C.Actor=True
+Openable_Door_BP_C.Tick=True
+Openable_Door_BP_C.Replication=True
+Openable_Door_BP_C.Variable=True
+Openable_Door_BP_C.Sockets=True
+Openable_Door_BP_C.ComponentReplication=True
+Openable_Door_BP_C.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+REINST_Openable_Door_BP_C_39.TransformCommon=True
+REINST_Openable_Door_BP_C_39.StaticMesh=True
+REINST_Openable_Door_BP_C_39.Materials=True
+REINST_Openable_Door_BP_C_39.Physics=True
+REINST_Openable_Door_BP_C_39.Collision=True
+REINST_Openable_Door_BP_C_39.Lighting=True
+REINST_Openable_Door_BP_C_39.Rendering=True
+REINST_Openable_Door_BP_C_39.Tags=True
+REINST_Openable_Door_BP_C_39.Cooking=True
+REINST_Openable_Door_BP_C_39.Input=True
+REINST_Openable_Door_BP_C_39.Actor=True
+REINST_Openable_Door_BP_C_43.TransformCommon=True
+REINST_Openable_Door_BP_C_43.StaticMesh=True
+REINST_Openable_Door_BP_C_43.Materials=True
+REINST_Openable_Door_BP_C_43.Physics=True
+REINST_Openable_Door_BP_C_43.Collision=True
+REINST_Openable_Door_BP_C_43.Lighting=True
+REINST_Openable_Door_BP_C_43.Rendering=True
+REINST_Openable_Door_BP_C_43.Tags=True
+REINST_Openable_Door_BP_C_43.Cooking=True
+REINST_Openable_Door_BP_C_43.Input=True
+REINST_Openable_Door_BP_C_43.Actor=True
+OpenDoor.Variable=True
+OpenDoor.Sockets=True
+OpenDoor.ComponentReplication=True
+OpenDoor.Events=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
@@ -1301,6 +1345,7 @@ StaticMeshActor.Collision=True
 /Engine/MapTemplates/SM_Template_Map_Floor.SM_Template_Map_Floor=1
 /Engine/EngineMeshes/Sphere.Sphere=1
 /Game/DefaultPawn_BP.DefaultPawn_BP=1
+/Game/Openable_Door_BP.Openable_Door_BP=1
 
 [MaterialEditor]
 PrimType=1
