Door now opens on a keyframe-based animation in blueprint editor.

--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,8 +79,8 @@ CurrentPosGridSize=0
 LastLevel=/Game/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2018.08.01-02.15.48
-BuildingEscape.LastCompileMethod=Runtime
+BuildingEscape.TimeStamp=2018.08.01-02.23.13
+BuildingEscape.LastCompileMethod=External
 PakFile.TimeStamp=2018.07.08-23.55.49
 PakFile.LastCompileMethod=Unknown
 SandboxFile.TimeStamp=2018.07.08-23.56.14
@@ -1288,6 +1288,39 @@ OpenDoor.Variable=True
 OpenDoor.Sockets=True
 OpenDoor.ComponentReplication=True
 OpenDoor.Events=True
+REINST_Openable_Door_BP_C_33.TransformCommon=True
+REINST_Openable_Door_BP_C_33.StaticMesh=True
+REINST_Openable_Door_BP_C_33.Materials=True
+REINST_Openable_Door_BP_C_33.Physics=True
+REINST_Openable_Door_BP_C_33.Collision=True
+REINST_Openable_Door_BP_C_33.Lighting=True
+REINST_Openable_Door_BP_C_33.Rendering=True
+REINST_Openable_Door_BP_C_33.Tags=True
+REINST_Openable_Door_BP_C_33.Cooking=True
+REINST_Openable_Door_BP_C_33.Input=True
+REINST_Openable_Door_BP_C_33.Actor=True
+REINST_Openable_Door_BP_C_37.TransformCommon=True
+REINST_Openable_Door_BP_C_37.StaticMesh=True
+REINST_Openable_Door_BP_C_37.Materials=True
+REINST_Openable_Door_BP_C_37.Physics=True
+REINST_Openable_Door_BP_C_37.Collision=True
+REINST_Openable_Door_BP_C_37.Lighting=True
+REINST_Openable_Door_BP_C_37.Rendering=True
+REINST_Openable_Door_BP_C_37.Tags=True
+REINST_Openable_Door_BP_C_37.Cooking=True
+REINST_Openable_Door_BP_C_37.Input=True
+REINST_Openable_Door_BP_C_37.Actor=True
+REINST_Openable_Door_BP_C_41.TransformCommon=True
+REINST_Openable_Door_BP_C_41.StaticMesh=True
+REINST_Openable_Door_BP_C_41.Materials=True
+REINST_Openable_Door_BP_C_41.Physics=True
+REINST_Openable_Door_BP_C_41.Collision=True
+REINST_Openable_Door_BP_C_41.Lighting=True
+REINST_Openable_Door_BP_C_41.Rendering=True
+REINST_Openable_Door_BP_C_41.Tags=True
+REINST_Openable_Door_BP_C_41.Cooking=True
+REINST_Openable_Door_BP_C_41.Input=True
+REINST_Openable_Door_BP_C_41.Actor=True
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
